death cleanup improvement